# notestash

./: CHANGELOG.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  notes.rs  processes.rs  vault.rs  watcher.rs
src/codemirror/: index.ts  livePreviewExtension.ts  noteTheme.ts  wikiLinkExtension.ts
src/components/command-palette/: CommandPalette.tsx
src/components/editor/: EditorArea.tsx  EditorPane.tsx  MarkdownEditor.tsx  MarkdownPreview.tsx  TabBar.tsx
src/components/layout/: ActivityBar.tsx  AppShell.tsx  Sidebar.tsx  StatusBar.tsx
src/components/sidebar/: FileTree.tsx  FileTreeContextMenu.tsx  FileTreeNode.tsx  SearchPanel.tsx  TagsPanel.tsx
src/components/vault/: VaultWelcome.tsx
src/hooks/: useFileWatcher.ts  useKeyboardShortcuts.ts  useNote.ts
src/lib/: fs.ts  parser.ts  search.ts  utils.ts  wikilinks.ts
src/services/: ai.ts
src/store/: editorSlice.ts  index.ts  searchSlice.ts  settingsSlice.ts  types.ts  uiSlice.ts  vaultSlice.ts
src/styles/: globals.css
src/styles/themes/: index.ts
src/types/: document.ts  editor.ts  note.ts  search.ts
